--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-
 {
+  "homepage": "https://shubhamnayak1.github.io/elogbookFrontEnd",
   "name": "pharmatrack-elogbook",
   "private": true,
   "version": "1.0.0",
@@ -8,7 +8,9 @@
     "dev": "vite",
     "start": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
@@ -18,9 +20,11 @@
     "recharts": "^3.6.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.7.3",
     "vite": "^6.0.7"
   }
